<resources>
    <string name="app_name">RoomPersistentDb</string>

    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>

    <string name="inserted">Data inserted</string>
    <string name="delete_message">Are you sure you want to delete this entry?</string>
    <string name="delete_message_all">Are you sure you want to delete all data?</string>
    <string name="yes">YES</string>
    <string name="no_search_data">No data associated this name</string>
    <string name="deleted_all">All data has been deleted</string>

</resources>